[gd_scene load_steps=5 format=3 uid="uid://ojg63mrqx2xv"]

[ext_resource type="Script" path="res://scenes/settings_screen.gd" id="1_mavek"]
[ext_resource type="AudioStream" uid="uid://c3nsxlgyoqtj" path="res://assets/music/HoppyHolidayLoop_20240601_1436.mp3" id="2_1o1q8"]
[ext_resource type="AudioStream" uid="uid://cnfhx6rwum7tq" path="res://assets/sfx/pickupCoin.wav" id="2_jtdj8"]
[ext_resource type="FontFile" uid="uid://ccwaavtkpgt3j" path="res://assets/fonts/Dosis/Dosis-SemiBold.ttf" id="4_b5gwa"]

[node name="SettingsScreen" type="Node2D"]
script = ExtResource("1_mavek")

[node name="Settings" type="Label" parent="."]
offset_left = 273.404
offset_top = 69.9649
offset_right = 365.404
offset_bottom = 103.965
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 24
text = "Paused"
metadata/_edit_lock_ = true

[node name="Music" type="Label" parent="."]
offset_left = 198.209
offset_top = 161.075
offset_right = 244.209
offset_bottom = 184.075
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 16
text = "Music"
metadata/_edit_lock_ = true

[node name="MusicSlider" type="HSlider" parent="."]
offset_left = 267.845
offset_top = 166.0
offset_right = 453.845
offset_bottom = 182.0
value = 100.0
metadata/_edit_lock_ = true

[node name="Sound" type="Label" parent="."]
offset_left = 198.209
offset_top = 193.617
offset_right = 247.209
offset_bottom = 216.617
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 16
text = "Sound"
metadata/_edit_lock_ = true

[node name="SoundSlider" type="HSlider" parent="."]
offset_left = 267.845
offset_top = 198.542
offset_right = 453.845
offset_bottom = 214.542
value = 100.0
metadata/_edit_lock_ = true

[node name="MainMenuButton" type="Button" parent="."]
offset_left = 270.5
offset_top = 234.0
offset_right = 361.5
offset_bottom = 271.0
theme_override_fonts/font = ExtResource("4_b5gwa")
theme_override_font_sizes/font_size = 18
text = "Main Menu"
metadata/_edit_lock_ = true

[node name="SampleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_1o1q8")
bus = &"Music"

[node name="SampleSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_jtdj8")
bus = &"Sound"

[connection signal="drag_ended" from="MusicSlider" to="." method="_on_music_slider_drag_ended"]
[connection signal="drag_started" from="MusicSlider" to="." method="_on_music_slider_drag_started"]
[connection signal="value_changed" from="MusicSlider" to="." method="change_music_volume"]
[connection signal="drag_ended" from="SoundSlider" to="." method="_on_sound_slider_drag_ended"]
[connection signal="value_changed" from="SoundSlider" to="." method="change_sound_volume"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
